Refactoring motivation text.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -95,7 +95,12 @@
 \maketitle
 
 \chapter{Motivation}
-Radio position determination of flying objects is a standard radiolocation discipline which historically led to the development of radar systems. At present, the radar systems are mature enough to detect almost any type of radio-reflective artificial flying object in the atmosphere or near space. \cite{Radar_basics} Therefore the technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving little space for scientific research. However, resulting applied technologies lead to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately, due to a need of specific parameters for scientific measurement, an experiment-specific radar system is usually built. 
+Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of transportation aircrafts and spaceships. The radar systems developed in last decades have parameters enough to solve standard situations \cite{Radar_basics}. Therefore the applied technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving little space for scientific research. However, some safety problems related to unusual conditions are not resolved yet. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers. 
+Therefore a research which helps quantify, predict and avoid these hazards should improve overall air traffic safety. This goal should be achieved by improving understanding of unusual atmospheric events and enhance sensing capabilities in extreme circumstances. 
+
+Hazardous conditions can have multiple different In the case of electrical discharges sensing a radar system should be an suitable 
+
+ resulting applied technologies lead to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately, due to a need of specific parameters for scientific measurement, an experiment-specific radar system is usually built. 
 This approach is shown in recent scientific papers, which describe state of the art radio detection methods of natural phenomena. For example, a lighting detection systems like \cite{NMLMA} uses specifically designed direction finding and time measurement receiver system.  Another system is designed to be a meteor scatter receiver on the specific frequency and position \cite{BRAMS}. 
 By combining parameters required by these and possibly other systems a universal receiver useful for natural object detection a scientific radio-measurement apparatus could emerge. The source \cite{LOFAR} describes the first and extremely expensive solution for this problem. The LOFAR station design and requirements are prohibitive for widespread scientific use, but a use of new techniques could scale down the station complexity and allows a small scale high-quality radio experiments. 
 
