Improved consistence of the thesis.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -95,41 +95,39 @@
 \maketitle
 
 \chapter{Motivation}
-Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of transportation aircrafts and spaceships. The radar systems developed in last decades have parameters enough to solve standard situations \cite{Radar_basics}. Therefore the applied technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving little space for scientific research. However, some safety problems related to unusual conditions are not resolved yet. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers. 
+Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of transportation aircrafts and spaceships. The radar systems developed in last decades have parameters enough to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers. 
 Therefore a research which helps quantify, predict and avoid these hazards should improve overall air traffic safety. This goal should be achieved by improving understanding of unusual atmospheric events and enhance sensing capabilities in extreme circumstances. 
-
-Hazardous conditions can have multiple different In the case of electrical discharges sensing a radar system should be an suitable 
-
- resulting applied technologies lead to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately, due to a need of specific parameters for scientific measurement, an experiment-specific radar system is usually built. 
-This approach is shown in recent scientific papers, which describe state of the art radio detection methods of natural phenomena. For example, a lighting detection systems like \cite{NMLMA} uses specifically designed direction finding and time measurement receiver system.  Another system is designed to be a meteor scatter receiver on the specific frequency and position \cite{BRAMS}. 
-By combining parameters required by these and possibly other systems a universal receiver useful for natural object detection a scientific radio-measurement apparatus could emerge. The source \cite{LOFAR} describes the first and extremely expensive solution for this problem. The LOFAR station design and requirements are prohibitive for widespread scientific use, but a use of new techniques could scale down the station complexity and allows a small scale high-quality radio experiments. 
+Unfortunately, hazardous conditions can have multiple different forms with different suitable detection methods which should often be combined to produce a desirable result, but at least for some cases, a radar sensing system should be a suitable option. 
+The parameters of that detection system should be universal as possible and assume possible combination with other detection methods. 
+However, in opposite to that the common technique, for natural phenomena detection is building an experiment-specific radar system. 
+This approach is shown in scientific papers, which describe state of the art radio detection methods of natural phenomena. For example, a lighting detection systems like \cite{NMLMA} uses specifically designed direction finding and time measurement receiver system.  Another system is intended to be a meteor scatter receiver on the specific frequency and position \cite{BRAMS}. 
+By combining parameters required by these and possibly other systems, a universal receiver useful for multi-experiment natural object detection could be built. The source \cite{LOFAR} describes the first and extremely expensive solution for this problem. The LOFAR station design and requirements are prohibitive for widespread scientific use, but a use of new techniques could scale down the station complexity and allows a small scale high-quality radio experiments which should help to improve the knowledge about atmospheric processes. Then the proper methods and algorithm should be developed to discovers evidence of hazardous conditions and suggest appropriate steps to improve safety. 
 
 \section{Main object parameters}
 
-From a radar point of view, the terminology usually uses a term target instead of an object. The radar cross section (RCS; describing the ability to reflect radio waves), object distance and velocity are typical limiting parameters of the radar systems. These parameters vary largely depending on the measured target type and limit overall energy budget of the radar system.
+The radar cross section (RCS; describing the ability to reflect radio waves), object distance and velocity are typical limiting parameters of the radar systems. These parameters vary largely depending on the measured target type and limit overall energy budget of the radar system. Therefore main groups of objects which should emerge in airspace will be described separately. 
 
 \subsection{Artificial airspace targets}
 
-A large group of possible radio reflective targets includes classical airspace objects like airplanes, unmanned aerial vehicles or satellites. These classical objects are detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object are usually known from other sources simultaneously and therefore are not attracting much interest of radio scientist except utilizing this object category for system parameters verification. Otherwise, these objects are usually treated as noise in scientific measurements. 
+A large group of possible radio reflective targets includes classical airspace objects like airplanes, unmanned aerial vehicles or satellites. These classical objects are detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object are usually known from other sources simultaneously, and therefore this object category is usable for system parameters verification. Otherwise, these objects are typically treated as noise in scientific measurements. 
 
 \subsection{Natural radio-detectable objects}
 
-Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list, for example, contains Solar system bodies, meteors, ionospheric fluctuations, solar flares, cosmic rays' particles and atmospheric electrical discharges. Not all of these natural phenomena have confirmed radio detection due to technical limitations or yet unknown physical principles \cite{LOPES}.  But observation of natural phenomena are generally scientifically more valuable than artificial objects \cite{astro_particles}, \cite{LOFAR_showers}. Therefore the following text will be mainly focused on methods useful for natural phenomena measurement and detection. 
+Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list, for example, contains Solar system bodies, meteors, ionospheric fluctuations, solar flares, cosmic rays' particles and atmospheric electrical discharges. Not all of these natural phenomena have confirmed radio detection due to technical limitations or yet unknown physical principles \cite{LOPES}, \cite{astro_particles}, \cite{LOFAR_showers}.
 
 \subsubsection{Reflective objects}
+A radio signal source should illuminate the objects which do not radiate signal itself. 
+The one of oldest known radio detection method such object type is a backscatter radar. It is an ordinary type of radar which expects reflective targets and illuminating them by radio signal which is transmitted from almost the same place as a receiver is located. Currently, several radars of this type are in operation to study meteors i. e.  SkiYMet\cite{skiymet}, CMOR \cite{CMOR_radar}.
 
-The one of oldest known radio detection method is a backscatter radar. It is an ordinary type of radar which expects reflective targets (meteor trails for example). Currently, several radars of this type are in operation to study meteors i. e.  SkiYMet\cite{skiymet}, CMOR \cite{CMOR_radar}.
-
-Meteors, the atmospheric products of meteoroids traveling in space, are studied for many decades. Results of such research help us to understand the evolution of not only the planetary system but the interplanetary and possibly interstellar medium \cite{interplanetary_medium} as well. As the density of the interplanetary medium is low, great statistic and long-term continuous data set is necessary to describe its properties. 
+Meteors, the atmospheric products of meteoroids traveling in space, are studied for many decades \cite{interplanetary_medium}. As the density of the interplanetary medium is low, great statistic and long-term continuous data set is necessary to describe meteor properties and measure an exact density of impacts.
 
 However, all mentioned  \cite{skiymet},\cite{CMOR_radar}  monostatic or bistatic backscatter radars have little detection coverage, usually limited to the radar antenna field of view. Therefore these radar types observe only several spatially limited areas of the Earth's atmosphere.
-Besides the backscatter scientific radar systems, a multistatic scatter radio meteor detection networks have evolved \cite{BRAMS},\cite{RETRAM}.
-These forward scattering multistatic systems have a great advantage of a significant detection coverage. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux in the Earth's atmosphere.
- However, the benefits of using this radio method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
-
-The main improvement of coverage which the forward scattering method brings originate in the fact that one or multiple radio-frequency transmitters can be cooperatively used simultaneously over the large area. Additionally, forward scattering geometry decreases the angle of reflection, therefore, increasing the available illuminating frequency of the transmitter. 
-
+Besides the backscatter scientific radar systems, a multistatic forward scatter radio meteor detection networks have evolved \cite{BRAMS},\cite{RETRAM}.
 The general principle of meteor observing by the forward scattering of radio waves off their trails is illustrated by the figure \ref{fig:forward_scattering}. A radio receiver with operating frequency range of 30-200MHz located at a proper distance (about 500-2000 km) from a transmitter. A curvature of the Earth or terrain features over this distance ensures there is no possibility of direct radio visibility. When a meteoroid enters the atmosphere, its meteor trail may reflect the radio waves emitted by the transmitter to the receiver. The signal can be received until the ionized meteor trail recombines. Reflections can last from tenths of a second to a few minutes, depending on used radio frequency and ionization density. The received signal characteristics are directly related to physical parameters of the meteoric event \cite{forward_scatter}.
+
+These forward scattering multistatic systems have a great advantage of a significant detection coverage. 
+The main improvement of coverage which the forward scattering method brings originate in the fact that one or multiple radio-frequency transmitters can be cooperatively used simultaneously over the large area. Additionally, forward scattering geometry decreases the angle of reflection, therefore, increasing the available illuminating frequency of the transmitter. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux in the Earth's atmosphere.
+ However, the benefits of using this radio method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
 
 \begin{figure}
  \begin{center}
@@ -141,12 +139,11 @@ The general principle of meteor observing by the forward scattering of radio wav
 
 \subsubsection{Emissive objects}
 
-Another object detection principle relies on the fact that some phenomena are radio emissive targets itself. A typical example of such object is thunderstorm lightning. The lightning detection and localization stations work on VLF, LF, and VHF radio bands. Specific frequency and bandwidth selected depend on the use case of the system. The long range lighting surveillance systems use VLF frequencies. Essentially all methods that provide accurate information about the location,  polarity,  and peak current of return strokes
-in the cloud to ground, lightning operates in this frequency range. This sensor type usually extracts a basic signal feature like time of trigger and amplitude by preset of waveform discrimination criteria \cite{VLF_TOGA}. Then the measured time and possible azimuth of received signal the event from multiple stations is processed in the central processing unit. The signal source is assumed to be point-like; therefore the spatial resolution of the best implementations of this technique are limited to sub-kilometer precision \cite{Lighting_locating}. 
+Another object detection principle relies on the fact that some phenomena are radio emissive targets itself. A typical example of such object is thunderstorm lightning. The lightning detection and localization stations work on VLF, LF, and VHF radio bands. Specific frequency and bandwidth selected depend on the use case of the system. The long range lighting surveillance systems use VLF frequencies. Essentially all methods that provide accurate information about the location,  polarity,  and peak current of return strokes in the cloud to ground, lightning operates in this frequency range. This sensor type usually extracts a basic signal feature like time of trigger and amplitude by preset of waveform discrimination criteria \cite{VLF_TOGA}. Then the measured time and possible azimuth of received signal of the event from multiple stations is processed in the central processing unit. The signal source is assumed to be point-like; therefore the spatial resolution of the best implementations of this technique are limited to sub-kilometer precision \cite{Lighting_locating}. 
 For more precise measurement a shorter wavelength is used the mostly from VHF band, where a combination of time of arrival and interferometry methods are used for reconstructing lighting channel \cite{NALMA_algorithms}, \cite{rocket_triggered} . 
 
 The newer detection systems are exclusively based on proprietary Vaisala  IMPACT \cite{IMPACT_sensor} or TLS200/TSS928/LS7002 lightning sensors. 
-Furthermore commercial off the shelf products are preferred systems for long-term sustainability \cite{4DLSS}. Unfortunately, these systems are intended to be used in meteorological measurements and safety use. Therefore are not suitable for research of atmospheric phenomena. The only one exception to this trend I have found in the literature is lighting research which takes place in LOFAR project \cite{LOFAR_lightning}, \cite{LOFAR_lightning2}.  
+Furthermore commercial off the shelf products are preferred systems for long-term sustainability \cite{4DLSS}. Unfortunately, these systems are intended to be used in meteorological measurements and insured events solving. Therefore they are not suitable for research of atmospheric phenomena. The only one exception to this trend I have found in the literature is lighting research which takes place in LOFAR project \cite{LOFAR_lightning}, \cite{LOFAR_lightning2}.  
 
 \section{Common position determination methods}
 
@@ -154,13 +151,13 @@ If we want to estimate target position by radio signal reflected or transmitted 
 
 \subsection{Direction finding}
 
-Radio direction finding is the oldest radio localization method.  It uses receiver system sensitive to the angular orientation of the incoming signal.  The target is then localized by combining angular information from multiple receivers.  The direction sensitivity of a system was historically achieved by using a directional antenna. Nowadays the system usually uses antenna arrays consisting of antenna elements with a semi-omnidirectional radiating pattern, but angular information combining process is still based on triangulation. 
+Radio direction finding is the oldest radio localization method.  It uses receiver system sensitive to the angular orientation of the incoming signal.  The target is then localized by combining angular information from multiple receivers.  The direction sensitivity of a system was historically achieved by using a directional antenna. Nowadays the system usually uses antenna arrays consisting of antenna elements with a semi-omnidirectional radiating pattern. Then the received signal direction is numerically calculated from phase shift differences of the signal received by the antenna array. 
 
 \subsection{Distance measurement}
 Localizing a target by radio distance measurement usually uses the time-variable radio signal, rarely a signal attenuation model.  The target position is obtained by combining measured distances between the target and the receiver using geometrical trilateration or multilateration. The general limiting factor of this method is the requirement of a time-space variance of the radio signal which could not be achieved in every case. 
 In some cases, a pulse signal could be used for distance measurement. This technique is used in almost all existing lightning localization networks. The distances are obtained by measurement of time of arrival (TOA) or time of group arrival (TOGA) respectively.
 
-To determine the 3-dimensional structure and temporal development of a lightning discharge the system utilizes the basic technique employed by the lightning mapping array that has been developed and operated at Kennedy Space Center by Carl Lennon and Launa Maier. The LMA uses time of arrival measurements to locate impulsive VHF radiation events during discharge. The figure \ref{fig:lihting_discharge} shows the VHF radiation for a portion of a normal lightning discharge. The sharp peaks in the Log RF plotted signal are produced by impulsive electrical breakdown events in small source regions \cite{NMLMA}. 
+To determine the 3-dimensional structure and temporal development of a lightning discharge the most systems utilizes the basic technique employed by the lightning mapping array (LMA) that has been developed and operated at Kennedy Space Center by Carl Lennon and Launa Maier. The LMA uses time of arrival measurements to locate impulsive VHF radiation events during discharge. The figure \ref{fig:lihting_discharge} shows the VHF signal for a portion of a normal lightning discharge. The sharp peaks in the plotted signal are produced by impulsive electrical breakdown events in small source regions \cite{NMLMA}. 
 
 \begin{figure}
  \begin{center}
@@ -233,7 +230,7 @@ T = \frac{\lambda^2}{16 \pi ^2 D}
 \label{equ:decay}
 \end{equation}
 
-The head echo of a meteor is usually called overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency close to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and the meteor trail reflection because the Doppler shift is applied on the part of the reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where head echoes are marked by sloped dotted lines. Static meteor trail reflections are indicated by straight vertical lines.
+The head echo of a meteor is usually called overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency close to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and the meteor trail reflection because the Doppler shift is applied on the part of the reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where sloped dotted lines mark head echoes. Straight vertical lines indicate static meteor trail reflections.
 
 \begin{figure*}
  \begin{center}
