Additional references to aircraft dosimetry.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -512,6 +512,36 @@ WISLEZ, J.-M.,
 Forward scattering of radio waves off meteor trails
 \emph{Proceedings of the International Meteor Conference}, Brandenburg, Germany, 1995, p. 99-117
 
+\bibitem{lightning_dose1}
+J. R. Dwyer, D. M. Smith, M. A. Uman, et. al.,
+Estimation of the fluence of high‐energy electron bursts produced by thunderclouds and the resulting radiation doses received in aircraft
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 115, D09206}, doi:10.1029/2009JD012039, 2010
+
+\bibitem{lightning_dose2}
+D. Petersen, M. Bailey, W. H. Beasley, J. Hallett,
+A brief review of the problem of lightning initiation and a hypothesis of initial lightning leader formation
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 113, D17205}, doi:10.1029/2007JD009036, 2008
+
+\bibitem{lightning_dose3}
+T. Torii, M. Takeishi, T. Hosono,
+Observation of gamma-ray dose increase associated with winter thunderstorm and lightning activity
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 107, NO. D17, 4324}, doi:10.1029/2001JD000938, 2002
+
+\bibitem{lightning_dose4}
+A Drozdov, A Grigoriev
+Neutrons from thunderstorms at low atmospheric altitudes and related doses at aircraft
+\emph{23rd European Cosmic Ray Symposium (and 32nd Russian Cosmic Ray Conference)}, doi:10.1088/1742-6596/409/1/012246
+
+\bibitem{lightning_dose5}
+A. Chilingarian
+Thunderstorm Ground Enhancements (TGEs) - New High - Energy Phenomenon Originated in the Terrestrial Atmosphere
+\emph{23rd European Cosmic Ray Symposium (and 32nd Russian Cosmic Ray Conference)}, doi:10.1088/1742-6596/409/1/012019
+
+\bibitem{lightning_dose6}
+K. B. Eack, W. H. Beasley
+Long-duration X-ray emissions observed in thunderstorms
+\emph{Journal of Geophysical Research: Atmospheres}, doi:10.1002/2015JD023262
+
 \bibitem{daylight_shover}
 CLEGG, J. A. ,HUGHES,  V. A. A., LOVELL, C. B., 
 The Daylight Meteor Streams of 1947 May-August
