--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -95,8 +95,8 @@
 \maketitle
 
 \chapter{Motivation}
-Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of transportation aircrafts and spaceships. The radar systems developed in last decades have parameters enough to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers. 
-Therefore a research which helps quantify, predict and avoid these hazards should improve overall air traffic safety. This goal should be achieved by improving understanding of unusual atmospheric events and enhance sensing capabilities in extreme circumstances. 
+Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of aircraft and spaceships. The radar systems developed in last decades have parameters enough to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet \cite{lightning_dose1}. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area \cite{lightning_dose2}. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers \cite{lightning_dose3}, \cite{lightning_dose4}, \cite{lightning_dose6}. 
+Therefore a research which helps quantify, predict and avoid these hazards should improve overall air traffic safety \cite{lightning_dose5}. This goal should be achieved by improving understanding of unusual atmospheric events and enhance sensing capabilities in extreme circumstances. 
 Unfortunately, hazardous conditions can have multiple different forms with different suitable detection methods which should often be combined to produce a desirable result, but at least for some cases, a radar sensing system should be a suitable option. 
 The parameters of that detection system should be universal as possible and assume possible combination with other detection methods. 
 However, in opposite to that the common technique, for natural phenomena detection is building an experiment-specific radar system. 
@@ -206,7 +206,7 @@ This method can localize only moving targets, but it is especially suitable for 
 
 \chapter{Experimental verification}
 
-The following section describes a real experimental work, which was carried out to verify the natural phenomena detection hypotheses described above. 
+The following section describes a real experimental work, which was carried out to verify the natural phenomena detection hypotheses described above. The experimental universality of the developed system was implemented wherever possible. 
 
 \section{Meteor detection system}
 
@@ -230,7 +230,7 @@ T = \frac{\lambda^2}{16 \pi ^2 D}
 \label{equ:decay}
 \end{equation}
 
-The head echo of a meteor is usually called overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency close to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and the meteor trail reflection because the Doppler shift is applied on the part of the reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where sloped dotted lines mark head echoes. Straight vertical lines indicate static meteor trail reflections.
+The head echo of a meteor is usually called overdense plasma due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency close to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and the meteor trail reflection because the Doppler shift is applied on the part of the reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where sloped dotted lines mark head echoes. Straight vertical lines indicate static meteor trail reflections.
 
 \begin{figure*}
  \begin{center}
@@ -252,18 +252,18 @@ F_{obs} << f_{pe} =\frac{\sqrt{\frac{n_e e^2}{m \epsilon_0}}}{2 \pi}
 \end{itemize}
 
 Obviously, not all parts of the meteor trail are observable from one station as the signal can be scattered to different directions non-specularly.
-However, if we use multiple receiving stations, we greatly increase the sensitivity, because several stations could be located in the reflection spots. Therefore it is very useful to have stations working as a cooperative detection network.
+However, if we use multiple receiving stations, we greatly increase the sensitivity, because several stations could be located in the reflection spots. Therefore it demonstrates the value of having stations working as a cooperative detection network.
 The network of stations has many advantages over a single transmitter - single receiver configuration. For example, it brings about robustness which allows operability even in a case that a part of the system is under a maintenance and therefore not functional.
                    
 There also exist signal processing advantages, especially if we want to compute meteor parameters such as its velocity and trajectory from the meteor radio observation. All physical parameters we could determine from the single reflection are signal intensity and frequency shift in a given time which corresponds to an ionization intensity and bi-static velocity.
-Therefore we must combine information about one meteor event from multiple stations to obtain points in space corresponding to the meteor trajectory. We align the events according to time stamps. Therefore, a precise time synchronization between the stations is required. The exact required precision depends on the network geometry. However, if we want to work in 300 m distance resolution, which is typical for the current optical methods, we need the time precision on approximately the microseconds scale. Therefore, we needed to develop a high-performance receiver with specific parameters, in particular with a high quality of time synchronization. Tight time synchronization requirements between nodes increase the complexity of the receiver system. To simplify the development process we used MLAB open source electronic prototyping platform.
+Therefore we must combine information about one meteor event from multiple stations to obtain points in space corresponding to the meteor trajectory. We align the events according to time stamps. Therefore, a precise time synchronization between the stations is required. The exact required precision depends on the network geometry. However, if we want to work in 300 m distance resolution, which is typical for the current optical methods, we need the time precision on approximately the microseconds scale. Therefore, we needed to develop a high-performance receiver with specific parameters, in particular with a high quality of time synchronization. Tight time synchronization requirements between nodes increase the complexity of the receiver system. To simplify the development process we used MLAB open source electronic prototyping platform \cite{Bolidozor},\cite{MLAB}.
 
 As a result, a new type of radio meteor detection system is being built, based on a new idea of distributed scientific measurement systems. At the moment Bolidozor network produces a large volume of valuable radioastronomical data ready for further processing.  
 We currently have an extensive database of multi-station meteor reflections. Unfortunately, we have yet not reached a suitable network geometry to reliably obtain meteor position and trajectory by the known methods \cite{Doppler_method}. 
-To overcome the missing algorithm issue, a further evolution of Bolidozor network should be focused on the research of the new trajectory estimation algorithms. We are also working on the network extension with the aim of extending its service area as well as increasing the station's density which should decrease data noise and improve the numerical stability of algorithms. 
+To overcome the missing algorithm issue, a further evolution of Bolidozor network should be focused on the research of the new trajectory estimation algorithms. We are also working on the network extension outside of GRAVES radar range with the aim of extending its service area as well as increasing the station's density which should decrease data noise and improve the numerical stability of algorithms. 
 
 \subsection{VOR Transmitters as signal sources}
-Although GRAVES military radar is a high power transmitter which easily allows basic detection of meteors, it is not an optimal system for meteor localization because it only has one transmitter, measurement method cannot be extended to the whole earth, and the transmitted signal is not suitably modulated to allow a useful distance measurement.  Therefore several other available transmitters are investigated, such as FM radio transmitters or VOR beacons. 
+Although GRAVES military radar is a high power transmitter which easily allows basic detection of meteors, it is not an optimal system for meteor localization because it only has one transmitter, measurement method cannot be extended to the whole Earth, and the transmitted signal is not suitably modulated to allow a useful distance measurement.  Therefore several other available transmitters are investigated, such as FM radio transmitters or VOR beacons. 
 
 For feasibility study of meteor detection based on VOR beacons, a numerical signal model has been created. The spectrum of modeled signal is shown in figure \ref{VOR_signal}.
 
@@ -310,7 +310,7 @@ As could be seen from resulting histogram, the power of expected received signal
 
 \section{Hemispherical radiating pattern antenna design}
 
-A highly directional pattern antenna is usually used for radio meteor observations, but these types of antennas became impractical in cases where we have multiple transmitters such as VOR beacons, spread around a reception station. In that situation, the hemispherical sensitivity of the antenna is more valuable than the peak directional antenna gain. A hemispherical radiation pattern antenna should be the best solution.  The symmetry of the radiation pattern of such antenna allows easy construction of antenna arrays which could be used for angular measurement of received signals.
+A highly directional pattern antenna is usually used for radio meteor observations, but these types of antennas became impractical in cases where we have multiple transmitters such as VOR beacons, spread around a reception station. In that situation, the hemispherical sensitivity and circular polarity uniformity of the antenna are more valuable than the peak directional antenna gain. A hemispherical radiation pattern antenna should be the best solution.  The symmetry of the radiation pattern of such antenna allows easy construction of antenna arrays which could be used for angular measurement of received signals.
 
 \subsection{Patch Antenna Design }
 
@@ -318,7 +318,7 @@ Patch antenna was initially examined due to an expectation of a simple construct
 
 \subsection{Short-circuited quadrifilar helix}
 
-Another antenna type was proposed to overcome the issues of the previous antenna design experiment.  Short-circuited quadrifilar helix (SC-QHA) is a variant of a well-known self-phased quadrifilar helix antenna (SP-QHA). However, unlike the SP-QHA type, the  SC-QHA has a narrower bandwidth which depends primarily on a bandwidth of a phasing network. Therefore the antenna could be more efficient for narrow band signals like meteor reflections.  The antenna was numerically modeled in NEC2++ software.
+Another antenna type was proposed to overcome the issues of the previous antenna design experiment.  Short-circuited quadrifilar helix (SC-QHA) is a variant of a well-known self-phased quadrifilar helix antenna (SP-QHA). However, unlike the SP-QHA type, the  SC-QHA has a narrower bandwidth which depends primarily on a bandwidth of a phasing network. Therefore the antenna could be more efficient for narrow band signals like meteor reflections.  The antenna was numerically modeled in NEC2++ software. See figures \ref{fig:QHA_antenna_RP}, which shows the expected radiation patterns of the antenna.  The prototype of the antenna was constructed based on the computer model, but a phasing network implementation becomes a challenging problem for practical usage of the SC-QHA antenna. 
 
 \begin{figure*}
  \begin{center}
@@ -334,7 +334,7 @@ Another antenna type was proposed to overcome the issues of the previous antenna
  \includegraphics[width=90mm ]{./img/SC_QHA_rp_horizontal.png} 
  \includegraphics[width=90mm ]{./img/SC_QHA_rp_vertical.png}
  \caption{An expected radiation patterns generated by numerical antenna model.}
-  \label{fig:QHA_antenna} 
+  \label{fig:QHA_antenna_RP} 
  \end{center}
 \end{figure*}
 
@@ -343,7 +343,7 @@ Another antenna type was proposed to overcome the issues of the previous antenna
 
 \section{Meteor trajectory determination}
 
-Every radio illuminated meteor trajectory in the atmosphere creates its Doppler shift reflection footprint.  This process could be described by a numerical model of Doppler shifts for points on the trajectory. For simplicity, the tested model expects constant velocity along a straight line of the meteor path which is divided into equidistant time samples. A numerical difference of path distances between transmitter, meteor, and receiver are computed, then velocity and Doppler shift value are obtained for every point of the trajectory. 
+Every radio illuminated meteor trajectory in the atmosphere creates its Doppler shift reflection footprint which could be recorded by a network of receivers.  This process could be described by a numerical model of Doppler shifts for points on the trajectory. For simplicity, the tested model expects constant velocity along a straight line of the meteor path which is divided into equidistant time samples. A numerical difference of path distances between transmitter, meteor, and receiver are computed, then velocity and Doppler shift value are obtained for every point of the trajectory. 
 The resulting figure of Doppler shifts calculated along the model meteor path radio-detectable on every existing station is shown in figure \ref{fig:dopplers}. 
 
 \begin{figure*}
@@ -356,7 +356,7 @@ The resulting figure of Doppler shifts calculated along the model meteor path ra
 
 
 This signal model can be partially confirmed from Bolidozor meteor database where several meteor events are recorded on multiple stations. If we plot such meteor event in time aligned spectrogram, we obtain an image similar to the figure \ref{fig:meteor_reflections}.
-Precise meteor trajectory estimation methods are investigated at the moment.  One of the difficulties is a possible suboptimal geometry configuration and low inter-station events correlation.
+Precise meteor trajectory estimation methods are investigated at the moment.  One of the difficulties is a possible suboptimal geometry configuration and low inter-station events coincidence.
 
 
 \chapter{Future work}
@@ -368,20 +368,11 @@ Algorithmic complexity of meteor trajectory estimation could be possibly reduced
 \section{Expansion of used methods to other natural phenomena}
 
 The analysis mentioned above of state of the art methods and systems leads to a conclusion that the dissertation should focus on multi-methodical detection and analysis of natural phenomena which is already the most promising area for radio scientific research. 
-Already obtained experiences can be used for detection other natural phenomena like lightning strikes which could be extremely useful for work at the CRREAT project which needs precise localization of atmospheric events to achieve its scientific goals. A publishable result could be expected according to CRREAT project roadmap because measurement of lightning position and its parameters are needed for describe the dependence on some other phenomena.  
-
+Already obtained experiences can be used for detection other natural phenomena like lightning strikes which could be extremely useful for work at the recently established CRREAT project which needs precise localization of atmospheric events to achieve its scientific goals. A publishable result could be expected according to CRREAT project roadmap because measurement of lightning position and its parameters are needed for describe the dependence on some other phenomena.  The CRREAT team will perform measurements of the atmospheric radiation and ionization events on satellites, aircraft, unmanned aerial vehicles, monitoring cars and ground stations. The CRREAT project will contribute to improvement of space weather models, air transport safety and global navigation systems reliability.
 
 \section{Proposed lightning detection system}
-The source \cite{LOFAR_lightning} suggests that the lightning pulses are strongly
-polarized where the polarization direction varies strongly for the individual peaks that form the
-total pulse. Combining the intensity and polarization information from many different antennas
-at different viewing angles on the discharge, the time structure, and direction of each charge movement can be determined.  This forms the input for building a 4-D vector map of the discharge current showing for every step the position in space as well as the direction of the
-electric current and therefore giving detailed insight into the spatiotemporal development of the
-lightning.  The shape of each pulse is related to the time-dependence and the distance over which the current flows.
-
-
-
-The CRREAT team will perform measurements of the atmospheric radiation and ionization events on satellites, aircraft, unmanned aerial vehicles, monitoring cars and ground stations. The CRREAT project will contribute to improvement of space weather models, air transport safety and global navigation systems reliability.
+The source \cite{LOFAR_lightning} suggests that the lightning pulses are strongly polarized where the polarization direction varies strongly for the individual peaks that form the total pulse. Combining the intensity and polarization information from many different antennas at different viewing angles on the discharge, the time structure, and direction of each charge movement can be determined.  This forms the input for building a 4-D vector map of the discharge current showing for every step the position in space as well as the direction of the electric current and therefore giving detailed insight into the spatiotemporal development of the lightning.  The shape of each pulse is related to the time-dependence and the distance over which the current flows.
+This hypothesis verification is a primary challenge for future work because currently used TOA methods mentioned above allows computation of cloud of points only, but lightning should be described by vectors instead. There is a point where work already done on meteor detection should be used on lightning vectors computation and significantly improve the state of the art lighting location techniques. The result of this improvement should be used for investigation of ligtning and cosmic radiation relations which help to improve air traffic safety. 
 
 \appendix
 
@@ -514,7 +505,7 @@ Forward scattering of radio waves off meteor trails
 
 \bibitem{lightning_dose1}
 J. R. Dwyer, D. M. Smith, M. A. Uman, et. al.,
-Estimation of the fluence of high‐energy electron bursts produced by thunderclouds and the resulting radiation doses received in aircraft
+Estimation of the fluence of high-energy electron bursts produced by thunderclouds and the resulting radiation doses received in aircraft
 \emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 115, D09206}, doi:10.1029/2009JD012039, 2010
 
 \bibitem{lightning_dose2}
